specs/001-typescript-to-zig-native/examples/invalid/string-literal-union-value.ts
type Mode = "dev" | "prod";

let mode: Mode = "test";
console.log(mode);
